<resources>
    <string name="app_name">Sign In Sign Up Ui</string>
    <string name="enter_yuar_email">Enter Yuar Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="hi_welcome">Hi! Welcome</string>
    <string name="email_address">Email Address</string>
    <string name="enter_yuar_passvord">Enter Yuar Passvord</string>
    <string name="log_iin">Log In</string>
    <string name="forgotten_your_password">Forgotten your password ?</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="todo">TODO</string>
    <string name="create_an_account">Create an Account</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
</resources>